# Internal-Genius

./: .dockerignore  .env.example  AGENTS.md  Makefile  README.md  build.sh  compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  Dockerfile.api  Dockerfile.worker  celery_worker.py  config.py  main.py  pyproject.toml  settings.py
backend/api/: __init__.py  document_controller.py
backend/prompts/: hyde_prompt.md  system_prompt.md
backend/repositories/: __init__.py  vector_store_repository.py
backend/schemas/: __init__.py  chat_schemas.py  upload_schemas.py
backend/services/: __init__.py  document_service.py  embedding_service.py  generation_service.py  rag_service.py  reranking_service.py
backend/tests/services/: test_reranking_service.py
backend/utils/: __init__.py  file_type_checking.py
data/: 𝐂𝐨𝐮𝐫𝐬𝐞𝐬 𝐲𝐨𝐮 𝐰𝐢𝐥𝐥 𝐫𝐞𝐠𝐫𝐞𝐭.txt
docs/: plan.md  specifications.md
docs/tasks/: 1.1_setup_fastapi.md  1.2.1_document_loading.md  1.2.2_chunking.md  1.2.3_embedding.md  1.2.4_vector_database.md  1.3.1_query_embedding.md  1.3.2_retrieval.md  1.3.3_generation.md  1.3.4_source_citation.md  1.3.5_orchestration.md  1.4.1_document_upload_endpoint.md  1.4.2_chat_queries_endpoint.md  2.1_setup_react.md  2.2.1_document_upload_ui.md  2.2.2_chat_ui.md  2.3.1_upload_api_integration.md  2.3.2_chat_api_integration.md  3.1_evaluation_system.md  3.2_query_transformation.md  3.3_re-ranking.md  3.4_performance_optimization.md  4.1_fully_functional_web_application.md  4.2_source_code.md  4.3_documentation.md  4.4_technical_article.md
rag_collection/: bruno.json  test route.bru  test-route.bru  untitled-request.bru
