[project]
name = "internal-genius"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "chromadb>=1.1.0",
    "docling>=2.54.0",
    "easyocr>=1.7.2",
    "fastapi[standard]>=0.117.1",
    "google-generativeai>=0.8.5",
    "langchain-google-genai>=2.0.10",
    "langgraph>=0.6.7",
    "mypy>=1.18.2",
    "numpy>=2.3.3",
    "pydantic-settings>=2.11.0",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "torch>=2.8.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "types-redis>=4.6.0.20241004",
]
